FIxed the alignment in test html

--- a/resources/css/test-style.css
+++ b/resources/css/test-style.css
@@ -1,7 +1,15 @@
-.table { display: table; }
+.table {
+  display: table;
+}
 .row {
   display: table-row;
-  color: #44AACC;
-  background-color : #99FFCC;
+  margin: auto;
 }
-.cell { display: table-cell; }
+.cell {
+  display: table-cell;
+  color: green;
+  vertical-align: top;
+  width: 400px;
+  border: 1px solid green;
+  padding: 10px;
+}
